--- a/index3.html
+++ b/index3.html
@@ -28,7 +28,7 @@
                 function ($scope) {
                     var lc = this;
                     lc.name = '';
-                    lc.names = ['chase', 'amanda', 'kyler', 'brycen', 'lindi'];
+                    lc.names = ['chase', 'amanda', 'kyler', 'brycen', 'lindi', 'julie', 'earl'];
                     lc.login = function login(){
                         var x = 0;
                         lc.check = true;
